# h1blinkedincompanynamecrewai

./: .gitignore  AMAZON_MATCHING_FIX.md  CHANGELOG.md  KEYWORD_FILTERING.md  PER_ATTACHMENT_MATCHING_FIX.md  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  SLACK_DEBUGGING_GUIDE.md  SLACK_PARSER_FIX_SUMMARY.md  SLACK_PARSER_GUIDE.md  SLACK_SETUP.md  TROUBLESHOOTING.md  debug_step_by_step.py  jupiternotebookrunsteps.md  linkedin_scraper_notebook.py  pyproject.toml  report.md  test_slack_logging.py  test_slack_parser.py  test_slack_parser_logging.py  test_slack_parser_with_keywords.py  test_slack_tool.py  test_tool.py
input/: job_keywords.txt
knowledge/: H1BCompanyNameAtlanta.txt
src/h1blinkedincompanynamecrewai/: crew.py  main.py
src/h1blinkedincompanynamecrewai/config/: agents.yaml  tasks.yaml
src/h1blinkedincompanynamecrewai/tools/: custom_tool.py  slack_parser_tool.py  slack_tool.py
